// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Headings > adds IDs and exports headings even when a custom heading is included 1`] = `
"<script module>
	export const slug = "test";
	export const headings = [{"level":1,"title":"This is some basic Markdoc","id":"this-is-some-basic-markdoc"},{"level":1,"title":"More fancy stuff","id":"more-fancy-stuff"}];
</script>
<article><h1 class="custom-heading" id="this-is-some-basic-markdoc">This is some basic Markdoc</h1><p>With a paragraph.</p><h1 class="custom-heading" id="more-fancy-stuff">More fancy stuff</h1><p>Content. Such great content.</p></article>"
`;

exports[`Headings > adds IDs and exports headings even when the custom heading is a custom component 1`] = `
"<script module>
	export const slug = "test";
</script>
<script>
	import HeadingComponent from '$lib/components/HeadingComponent.svelte';
</script>
<article><HeadingComponent id="this-is-some-basic-markdoc">This is some basic Markdoc</HeadingComponent><p>With a paragraph.</p><HeadingComponent id="more-fancy-stuff">More fancy stuff</HeadingComponent><p>Content. Such great content.</p></article>"
`;

exports[`Headings > adds IDs when passed a custom slugifying function 1`] = `
"<script module>
	export const slug = "test";
	export const headings = [{"level":1,"title":"This is some basic Markdoc","id":"This-is-some-basic-Markdoc"},{"level":2,"title":"More fancy stuff","id":"More-fancy-stuff"}];
</script>
<article><h1 id="This-is-some-basic-Markdoc">This is some basic Markdoc</h1><p>With a paragraph.</p><h2 id="More-fancy-stuff">More fancy stuff</h2><p>Content. Such great content.</p></article>"
`;

exports[`Headings > adds IDs when passed a custom slugifying function even for custom headings 1`] = `
"<script module>
	export const slug = "test";
	export const headings = [{"level":1,"title":"This is some basic Markdoc","id":"This-is-some-basic-Markdoc"},{"level":1,"title":"More fancy stuff","id":"More-fancy-stuff"}];
</script>
<article><h1 class="custom-heading" id="This-is-some-basic-Markdoc">This is some basic Markdoc</h1><p>With a paragraph.</p><h1 class="custom-heading" id="More-fancy-stuff">More fancy stuff</h1><p>Content. Such great content.</p></article>"
`;

exports[`Headings > handles explicitly set heading IDs 1`] = `
"<script module>
	export const slug = "test";
	export const headings = [{"level":1,"title":"This is some Markdoc ","id":"overview"},{"level":2,"title":"Second heading ","id":"two"}];
</script>
<article><h1 id="overview">This is some Markdoc </h1><p>Some text</p><h2 id="two">Second heading </h2><p>And more</p></article>"
`;
